--- a/examples/with-docker-compose/docker-compose.dev.yml
+++ b/examples/with-docker-compose/docker-compose.dev.yml
@@ -1,4 +1,5 @@
-version: '3'
+# `version` key is deprecated
+# https://docs.docker.com/compose/compose-file/compose-versioning/
 
 services:
   next-app:
@@ -8,13 +9,14 @@ services:
       dockerfile: dev.Dockerfile
 
     # Set environment variables directly in the docker-compose file
-    environment:
-      ENV_VARIABLE: ${ENV_VARIABLE}
-      NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
+    # environment:
+    #   ENV_VARIABLE: ${ENV_VARIABLE}
+    #   NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
 
     # Set envrionment variables based on the .env file
     env_file:
-      - .env
+      - .env.development
+      - .env.development.local
     volumes:
       - ./next-app/src:/app/src
       - ./next-app/public:/app/public
