--- a/packages/next/src/compiled/react-dom/package.json
+++ b/packages/next/src/compiled/react-dom/package.json
@@ -18,6 +18,18 @@
     "./server.bun": "./server.bun.js",
     "./server.edge": "./server.edge.js",
     "./server.node": "./server.node.js",
+    "./static": {
+      "workerd": "./static.edge.js",
+      "deno": "./static.browser.js",
+      "worker": "./static.browser.js",
+      "browser": "./static.browser.js",
+      "node": "./static.node.js",
+      "edge-light": "./static.edge.js",
+      "default": "./static.node.js"
+    },
+    "./static.browser": "./static.browser.js",
+    "./static.edge": "./static.edge.js",
+    "./static.node": "./static.node.js",
     "./server-rendering-stub": "./server-rendering-stub.js",
     "./profiling": "./profiling.js",
     "./test-utils": "./test-utils.js",
@@ -26,12 +38,13 @@
   },
   "dependencies": {
     "loose-envify": "^1.1.0",
-    "scheduler": "0.24.0-canary-dd480ef92-20230822"
+    "scheduler": "0.24.0-canary-d6dcad6a8-20230914"
   },
   "peerDependencies": {
-    "react": "18.3.0-canary-dd480ef92-20230822"
+    "react": "18.3.0-canary-d6dcad6a8-20230914"
   },
   "browser": {
-    "./server.js": "./server.browser.js"
+    "./server.js": "./server.browser.js",
+    "./static.js": "./static.browser.js"
   }
 }
