--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -42,11 +42,9 @@ jobs:
     steps:
       - name: Setup node
         uses: actions/setup-node@v3
-        if: ${{ steps.docs-change.outputs.docsChange == 'nope' }}
         with:
           node-version: 18
           check-latest: true
-      - run: corepack enable
 
       - run: git clone https://github.com/vercel/next.js.git --depth=25 .
 
@@ -56,8 +54,7 @@ jobs:
       - name: tune linux network
         run: sudo ethtool -K eth0 tx off rx off
 
-      - name: update pnpm
-        run: pnpm i -g pnpm
+      - run: corepack enable && pnpm --version
 
       - id: get-store-path
         run: echo STORE_PATH=$(pnpm store path) >> $GITHUB_OUTPUT
