--- a/.github/workflows/issue_validator.yml
+++ b/.github/workflows/issue_validator.yml
@@ -18,10 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Nissuer
-        uses: balazsorban44/nissuer@1.3.0
+        uses: balazsorban44/nissuer@1.3.3
         with:
           label-area-prefix: 'area:'
-          label-area-section: '### Which area(s) are affected?(.*)### Additional context'
+          label-area-section: 'Which area\\(s\\) are affected\\? \\(Select all that apply\\)(.*)### Additional context'
           label-comments: |
             {
               "please add a complete reproduction": ".github/invalid-reproduction.md",
