--- a/packages/third-parties/package.json
+++ b/packages/third-parties/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc -d -p tsconfig.json",
+    "build": "node ../../scripts/rm.mjs dist && tsc -d -p tsconfig.json",
     "prepublishOnly": "cd ../../ && turbo run build",
     "dev": "tsc -d -w -p tsconfig.json",
     "typescript": "tsec --noEmit -p tsconfig.json"
@@ -25,8 +25,7 @@
   "devDependencies": {
     "next": "13.4.20-canary.38",
     "outdent": "0.8.0",
-    "prettier": "2.5.1",
-    "rimraf": "^3.0.2"
+    "prettier": "2.5.1"
   },
   "peerDependencies": {
     "next": "^13.0.0",
