--- a/packages/next/src/compiled/react-dom/package.json
+++ b/packages/next/src/compiled/react-dom/package.json
@@ -2,7 +2,10 @@
   "name": "react-dom-builtin",
   "main": "index.js",
   "exports": {
-    ".": "./index.js",
+    ".": {
+      "react-server": "./react-dom.shared-subset.js",
+      "default": "./index.js"
+    },
     "./client": "./client.js",
     "./server": {
       "workerd": "./server.edge.js",
@@ -38,10 +41,10 @@
   },
   "dependencies": {
     "loose-envify": "^1.1.0",
-    "scheduler": "0.24.0-canary-d6dcad6a8-20230914"
+    "scheduler": "0.24.0-canary-2807d781a-20230918"
   },
   "peerDependencies": {
-    "react": "18.3.0-canary-d6dcad6a8-20230914"
+    "react": "18.3.0-canary-2807d781a-20230918"
   },
   "browser": {
     "./server.js": "./server.browser.js",
