Commented out the HOSTNAME variable in Dockerfile

--- a/examples/with-docker-multi-env/docker/development/Dockerfile
+++ b/examples/with-docker-multi-env/docker/development/Dockerfile
@@ -47,6 +47,9 @@ USER nextjs
 EXPOSE 3000
 
 ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
+
+# Uncomment the following line if you'd like to change the default value
+# for process.env.HOSTNAME used to start your server
+#ENV HOSTNAME "0.0.0.0"
 
 CMD ["node", "server.js"]
