--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -160,6 +160,20 @@ jobs:
       afterBuild: rustup target add wasm32-unknown-unknown && curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && node ./scripts/normalize-version-bump.js && turbo run build-wasm -- --target nodejs --features tracing/release_max_level_info && git checkout . && mv packages/next-swc/crates/wasm/pkg packages/next-swc/crates/wasm/pkg-nodejs && node ./scripts/setup-wasm.mjs && NEXT_TEST_MODE=start TEST_WASM=true node run-tests.js test/integration/production/test/index.test.js test/e2e/streaming-ssr/index.test.ts
     secrets: inherit
 
+  test-unit:
+    name: test unit
+    strategy:
+      fail-fast: false
+      matrix:
+        group: [1, 2, 3]
+
+    uses: ./.github/workflows/build_reusable.yml
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --type unit
+
+    secrets: inherit
+
   test-dev:
     name: test dev
     needs: ['build-native', 'build-next']
@@ -215,7 +229,7 @@ jobs:
     secrets: inherit
 
   report-test-results:
-    needs: ['test-dev', 'test-prod', 'test-integration']
+    needs: ['test-unit', 'test-dev', 'test-prod', 'test-integration']
     uses: ./.github/workflows/build_reusable.yml
     with:
       skipForDocsOnly: 'yes'
@@ -230,6 +244,7 @@ jobs:
         'lint',
         'validate-docs-links',
         'check-types-precompiled',
+        'test-unit',
         'test-dev',
         'test-prod',
         'test-integration',
