--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,11 @@ swc_core = { version = "0.83.12", features = [
 testing = { version = "0.34.1" }
 
 # Turbo crates
-turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230922.3" }
+turbopack-binding = { path = "../turbo/crates/turbopack-binding" }
 # [TODO]: need to refactor embed_directory! macro usages, as well as resolving turbo_tasks::function, macros..
-turbo-tasks = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230922.3" }
+turbo-tasks = { path = "../turbo/crates/turbo-tasks" }
 # [TODO]: need to refactor embed_directory! macro usage in next-core
-turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230922.3" }
+turbo-tasks-fs = { path = "../turbo/crates/turbo-tasks-fs" }
 
 # General Deps
 
