--- a/examples/with-next-translate/package.json
+++ b/examples/with-next-translate/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.19",
+    "next": "latest",
     "next-translate": "2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
