--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "test/**/*.test.ts",
     "test/**/*.test.tsx",
     "test/**/test/*",
-    "packages/next/types/webpack.d.ts"
+    "packages/next/types/webpack.d.ts",
+    "test/e2e/pages-dir/client-navigation/index.test.js",
+    "test/e2e/pages-dir/client-navigation/rendering.js"
   ]
 }
