--- a/examples/panda-css/package.json
+++ b/examples/panda-css/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.13.1",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "typescript": "5.2.2"
+    "@pandacss/dev": "^0.15.1",
+    "@types/node": "^20.7.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "typescript": "^5.2.2"
   }
 }
