--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -152,19 +152,19 @@ jobs:
     secrets: inherit
 
   # --type production also runs tests/e2e
-  test-turbopack-prod:
-    name: test turbopack prod
-    needs: ['build-native', 'build-next']
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3, 4, 5]
-    uses: ./.github/workflows/build_reusable.yml
-    with:
-      nodeVersion: 16
-      skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.json" TURBOPACK=1 NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --type production
-    secrets: inherit
+  # test-turbopack-prod:
+  #   name: test turbopack prod
+  #   needs: ['build-native', 'build-next']
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group: [1, 2, 3, 4, 5]
+  #   uses: ./.github/workflows/build_reusable.yml
+  #   with:
+  #     nodeVersion: 16
+  #     skipForDocsOnly: 'yes'
+  #     afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/test/turbopack-tests-manifest.json" TURBOPACK=1 NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --type production
+  #   secrets: inherit
 
   test-next-swc-wasm:
     name: test next-swc wasm
