--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -208,7 +208,6 @@
     "browserslist": "4.20.2",
     "buffer": "5.6.0",
     "bytes": "3.1.1",
-    "chalk": "2.4.2",
     "ci-info": "watson/ci-info#f43f6a1cefff47fb361c88cf4b943fdbcaafe540",
     "cli-select": "1.1.2",
     "client-only": "0.0.1",
@@ -264,6 +263,7 @@
     "p-limit": "3.1.0",
     "path-browserify": "1.0.1",
     "path-to-regexp": "6.1.0",
+    "picocolors": "1.0.0",
     "platform": "1.3.6",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-modules-extract-imports": "3.0.0",
