--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -96,8 +96,7 @@
     "caniuse-lite": "^1.0.30001406",
     "postcss": "8.4.14",
     "styled-jsx": "5.1.1",
-    "watchpack": "2.4.0",
-    "zod": "3.21.4"
+    "watchpack": "2.4.0"
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.1.0",
@@ -296,6 +295,7 @@
     "string-hash": "1.1.3",
     "string_decoder": "1.3.0",
     "strip-ansi": "6.0.0",
+    "superstruct": "1.0.3",
     "tar": "6.1.15",
     "taskr": "1.1.0",
     "terser": "5.14.1",
