--- a/examples/with-meilisearch/package.json
+++ b/examples/with-meilisearch/package.json
@@ -5,7 +5,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "latest",
+    "@meilisearch/instant-meilisearch": "^0.13.6",
     "autoprefixer": "10.4.14",
     "next": "latest",
     "postcss": "8.4.27",
@@ -16,9 +16,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.16",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-instantsearch-dom": "^6.12.3"
+    "@types/node": "^20.7.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "@types/react-instantsearch-dom": "^6.12.4"
   }
 }
