--- a/crates/turbo-tasks-memory/Cargo.toml
+++ b/crates/turbo-tasks-memory/Cargo.toml
@@ -19,6 +19,7 @@ num_cpus = "1.13.1"
 once_cell = { workspace = true }
 parking_lot = { workspace = true }
 priority-queue = "1.3.0"
+ref-cast = "1.0.20"
 rustc-hash = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
@@ -38,6 +39,7 @@ turbo-tasks-testing = { workspace = true }
 turbo-tasks-build = { workspace = true }
 
 [features]
+track_unfinished = []
 unsafe_once_map = []
 log_running_tasks = []
 log_scheduled_tasks = []
@@ -48,6 +50,7 @@ print_scope_updates = []
 print_task_invalidation = []
 inline_add_to_scope = []
 inline_remove_from_scope = []
+default = []
 
 [[bench]]
 name = "mod"
