--- a/examples/with-fauna/package.json
+++ b/examples/with-fauna/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
-    "faunadb": "4.5.4",
-    "graphql": "16.8.1",
-    "graphql-request": "4.3.0",
+    "fauna": "^1.2.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -20,8 +18,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "request": "^2.88.2",
     "stream-to-promise": "3.0.0",
-    "tailwindcss": "^3.1.2",
-    "request": "^2.88.2"
+    "tailwindcss": "^3.1.2"
   }
 }
