--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,11 @@ swc_core = { version = "0.83.12", features = [
 testing = { version = "0.34.1" }
 
 # Turbo crates
-turbopack-binding = { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/basepath-rebase-redux" }
+turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230928.5" }
 # [TODO]: need to refactor embed_directory! macro usages, as well as resolving turbo_tasks::function, macros..
-turbo-tasks = { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/basepath-rebase-redux" }
+turbo-tasks = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230928.5" }
 # [TODO]: need to refactor embed_directory! macro usage in next-core
-turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", branch = "wbinnssmith/basepath-rebase-redux" }
+turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230928.5" }
 
 # General Deps
 
@@ -121,7 +121,7 @@ shadow-rs = { version = "0.23.0", default-features = false, features = [
 ] }
 syn = "1.0.107"
 tempfile = "3.3.0"
-thiserror = "1.0.48"
+thiserror = "1.0.38"
 tiny-gradient = "0.1.0"
 tokio = "1.25.0"
 tokio-util = { version = "0.7.7", features = ["io"] }
