--- a/examples/with-fauna/package.json
+++ b/examples/with-fauna/package.json
@@ -11,8 +11,8 @@
     "date-fns": "2.28.0",
     "fauna": "^1.2.0",
     "next": "latest",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^2.0.0"
   },
   "devDependencies": {
