using app routes and refactor

--- a/examples/with-fauna/package.json
+++ b/examples/with-fauna/package.json
@@ -12,8 +12,7 @@
     "fauna": "^1.2.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swr": "^2.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
