--- a/examples/with-fauna/package.json
+++ b/examples/with-fauna/package.json
@@ -12,7 +12,8 @@
     "fauna": "^1.2.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
